# crusty-gba

./: .gitignore  Cargo.toml  README.md  tester.py
crusty-gba/: Cargo.toml
crusty-gba/src/: lib.rs  main.rs
crusty-gba/src/cli/: mod.rs
crusty-gba/src/gba/: arm.rs  cpu.rs  dma.rs  mapped_io.rs  mod.rs  system.rs  thumb.rs  utils.rs
crusty-gba/src/memory/: mod.rs
crusty-gba/src/ppu/: bg_control.rs  disp_control.rs  mod.rs  window_control.rs
crusty-gba/src/renderer/: debug.rs  gui.rs
crusty-gba/src/utils/: io_registers.rs  math.rs  mod.rs  shifter.rs
crusty_harness/: Cargo.toml
crusty_harness/src/: cli.rs  main.rs  models.rs  report.rs
src/: main.rs
src/cli/: mod.rs
src/gba/: arm.rs  cpu.rs  debugger.rs  dma.rs  error.rs  instructions.rs  mapped_io.rs  mod.rs  system.rs  thumb.rs  utils.rs
src/ppu/: bg_control.rs  color_effect.rs  disp_control.rs  mod.rs  oam_attribute.rs  window_control.rs
src/renderer/: debug.rs  gui.rs  mod.rs  ratatui.rs
src/utils/: io_registers.rs  mod.rs  shifter.rs
