[package]
name = "crusty-gba"
version = "0.1.0"
edition = "2021"

[dependencies]
strum = "0.26.3"
strum_macros = "0.26.4"
clap = { version = "4.5.20", features = ["derive"] }
pixels = { path = "../pixels/"}
winit = "0.29.15"
winit_input_helper = "0.15"
game-loop = { version = "=1.1.0", features = ["winit"] }
byteorder = "1"
getrandom = "0.2"
randomize = "3"
tracing = "0.1.40"
