[package]
name = "crusty_harness"
version = "0.1.0"
edition = "2024"

[dependencies]
crusty-gba = {path = "../crusty-gba/"}
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
tokio = { version = "1.52.3", features = ["full"] }
clap = { workspace = true, features = ["derive"]}
